正在撰写文档
从table环境换成supertabular环境，可以自动换页，大概。

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,12 @@
 !*.elf
 !*.bmm
 !*.xmp
+#########
+#pdf documents
+#########
+/documents/*.out
+!/documents/*.tex
+!/documents/*.pdf
 
 # End of https://www.gitignore.io/api/xilinxvivado
 
