听说需要，所以随便push一下

--- a/功能测例/src/Makefile
+++ b/功能测例/src/Makefile
@@ -15,7 +15,7 @@ endif
 
 export TOPDIR AR CFLAGS
 
-export CROSS_COMPILE ?= mips-linux-gnu-
+export CROSS_COMPILE ?= mipsel-linux-gnu-
 
 all: main.bin main.text main.data
 
